resources/app-sre-stage/code-quarkus-redhat-int-build/code-quarkus-redhat-int-build-preview.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    service: code-quarkus
  name: code-quarkus-redhat-int-buid-preview
spec:
  port:
    targetPort: "8080"
  to:
    kind: Service
    name: code-quarkus
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
